--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
-b = location.href = "orlink";
-c = location.href = "2020vt";
-d = Math.ceil(Math.random() * 7);
+b = location.href = "losetheover";
+c = location.href = "weighT";
+d = Math.ceil(Math.random() * 8);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
+
 
