--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 function reDirect() {
 a = location.href = "bit.ly/";
 b = location.href = "techno";
-c = location.href = "szw";
+c = location.href = "szww";
 d = Math.ceil(Math.random() * 4);
 a = "http://" + a + b + c + d ;
 window.location = a
