--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 function reDirect() {
 a = location.href = "bit.ly/";
 b = location.href = "ma3ana";
-c = location.href = "funv";
+c = location.href = "funvv";
 d = Math.ceil(Math.random() * 3);
 a = "http://" + a + b + c + d ;
 window.location = a
